--- a/Marmalade/pom.xml
+++ b/Marmalade/pom.xml
@@ -47,19 +47,9 @@
             <version>12.0.1</version>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.1</version>
-        </dependency>
-        <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>marmalade-core</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>marmalade-jar</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <artifactId>marmalade-app</artifactId>
+            <version>0.1.0</version>
         </dependency>
     </dependencies>
     <build>
