--- a/Marmalade/pom.xml
+++ b/Marmalade/pom.xml
@@ -29,6 +29,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <deploy.version>0.1</deploy.version>
+        <native.library></native.library>
     </properties>
     <dependencies>
         <dependency>
@@ -81,8 +82,83 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>mac-build</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-shade-plugin</artifactId>
+                        <version>3.2.1</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>shade</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <outputDirectory>executable</outputDirectory>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <finalName>Marmalade-Mac-${project.version}</finalName>
+                            <transformers>
+                                <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>net.bplaced.clayn.marmalade.ui.MarmaladeStarter</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        
+    </profiles>
     <build>
+        
         <plugins>
+            <plugin>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>8.8.3</version>
+                <configuration>
+                    <jfxAppOutputDir>executable/jfx</jfxAppOutputDir>
+                    <nativeOutputDir>executable/native</nativeOutputDir>
+                    <mainClass>net.bplaced.clayn.marmalade.ui.MarmaladeStarter</mainClass>
+                    <allPermissions>true</allPermissions>
+                    <vendor>Clayntech</vendor>
+                    <appName>Marmalade</appName>
+                                        
+                    <bundleArguments>
+                        <runtime>${native.library}</runtime>
+                        <mac.dmg.simple>true</mac.dmg.simple>
+                        <systemWide>true</systemWide>
+                    </bundleArguments>
+                    <verbose>true</verbose>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>executable</directory>
+                            <includes>
+                                <include>**/*</include>
+                            </includes>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
